Fixed new fridge question having no nav image on mobile. Fixed 'start over' and 'results' buttons not working on desktop in mobile mode.

--- a/app/scss/structure/_app-main.scss
+++ b/app/scss/structure/_app-main.scss
@@ -142,8 +142,7 @@ html, body {
 }
 div.mobile-app-nav-arrows {
 	position: relative;
-	height: 50px;
-	margin-bottom: 10px;
+	height: 25px;
 
 	.btn-next, .btn-prev {bottom: initial;}
 	.btn-next {right: 35px;}
